@@ -48,6 +48,7 @@ Changes since version 0.80.2:
 - Unshade application's shaded windows when Dbl-MiddleClick-ing its appicon.
   (this is to be consistent with deminiaturizing application's miniwindows
   which also happens in this case, since shading is a form of miniaturization)
+- Fixed bug with tpixmap from previous xinerama patch
 
 
 Changes since version 0.80.1:
